<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Calc_Fragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/btn_limpar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView_Visor2" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/btn_limpar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:text="@string/Limpar"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_sete"
        app:layout_constraintEnd_toStartOf="@+id/btn_apagar"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/btn_apagar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/Apagar"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_limpar"
        app:layout_constraintEnd_toStartOf="@+id/btn_percent"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/btn_limpar"
        app:layout_constraintTop_toTopOf="@+id/btn_limpar" />

    <Button
        android:id="@+id/btn_percent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/Porcentagem"
        app:layout_constraintBottom_toBottomOf="@+id/btn_apagar"
        app:layout_constraintEnd_toStartOf="@+id/btn_div"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/btn_apagar"
        app:layout_constraintTop_toTopOf="@+id/btn_apagar" />

    <Button
        android:id="@+id/btn_div"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Divisão"
        app:layout_constraintBottom_toBottomOf="@+id/btn_percent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/btn_percent"
        app:layout_constraintTop_toTopOf="@+id/btn_percent" />

    <Button
        android:id="@+id/btn_sete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:text="@string/Sete"
        app:layout_constraintBottom_toTopOf="@+id/btn_quatro"
        app:layout_constraintEnd_toStartOf="@+id/btn_oito"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_limpar" />

    <Button
        android:id="@+id/btn_oito"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/Oito"
        app:layout_constraintBottom_toBottomOf="@+id/btn_sete"
        app:layout_constraintEnd_toStartOf="@+id/btn_nove"
        app:layout_constraintStart_toEndOf="@+id/btn_sete"
        app:layout_constraintTop_toTopOf="@+id/btn_sete" />

    <Button
        android:id="@+id/btn_nove"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/Nove"
        app:layout_constraintBottom_toBottomOf="@+id/btn_oito"
        app:layout_constraintEnd_toStartOf="@+id/btn_mult"
        app:layout_constraintStart_toEndOf="@+id/btn_oito"
        app:layout_constraintTop_toTopOf="@+id/btn_oito" />

    <Button
        android:id="@+id/btn_mult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Multiplicação"
        app:layout_constraintBottom_toBottomOf="@+id/btn_nove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_nove"
        app:layout_constraintTop_toTopOf="@+id/btn_nove" />

    <Button
        android:id="@+id/btn_quatro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:text="@string/Quatro"
        app:layout_constraintBottom_toTopOf="@+id/btn_um"
        app:layout_constraintEnd_toStartOf="@+id/btn_cinco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sete" />

    <Button
        android:id="@+id/btn_cinco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/Cinco"
        app:layout_constraintBottom_toBottomOf="@+id/btn_quatro"
        app:layout_constraintEnd_toStartOf="@+id/btn_seis"
        app:layout_constraintStart_toEndOf="@+id/btn_quatro"
        app:layout_constraintTop_toTopOf="@+id/btn_quatro" />

    <Button
        android:id="@+id/btn_seis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/Seis"
        app:layout_constraintBottom_toBottomOf="@+id/btn_cinco"
        app:layout_constraintEnd_toStartOf="@+id/btn_sub"
        app:layout_constraintStart_toEndOf="@+id/btn_cinco"
        app:layout_constraintTop_toTopOf="@+id/btn_cinco" />

    <Button
        android:id="@+id/btn_sub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Subtração"
        app:layout_constraintBottom_toBottomOf="@+id/btn_seis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_seis"
        app:layout_constraintTop_toTopOf="@+id/btn_seis" />

    <Button
        android:id="@+id/btn_um"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:text="@string/Um"
        app:layout_constraintBottom_toTopOf="@+id/btn_zero"
        app:layout_constraintEnd_toStartOf="@+id/btn_dois"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_quatro" />

    <Button
        android:id="@+id/btn_dois"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/Dois"
        app:layout_constraintBottom_toBottomOf="@+id/btn_um"
        app:layout_constraintEnd_toStartOf="@+id/btn_tres"
        app:layout_constraintStart_toEndOf="@+id/btn_um"
        app:layout_constraintTop_toTopOf="@+id/btn_um" />

    <Button
        android:id="@+id/btn_tres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/Três"
        app:layout_constraintBottom_toBottomOf="@+id/btn_dois"
        app:layout_constraintEnd_toStartOf="@+id/btn_soma"
        app:layout_constraintStart_toEndOf="@+id/btn_dois"
        app:layout_constraintTop_toTopOf="@+id/btn_dois" />

    <Button
        android:id="@+id/btn_soma"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Soma"
        app:layout_constraintBottom_toBottomOf="@+id/btn_tres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_tres"
        app:layout_constraintTop_toTopOf="@+id/btn_tres" />

    <Button
        android:id="@+id/btn_zero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="50dp"
        android:text="@string/Zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_ponto"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_um" />

    <Button
        android:id="@+id/btn_ponto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/Ponto"
        app:layout_constraintBottom_toBottomOf="@+id/btn_zero"
        app:layout_constraintEnd_toStartOf="@+id/btn_igual"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/btn_zero"
        app:layout_constraintTop_toTopOf="@+id/btn_zero" />

    <Button
        android:id="@+id/btn_igual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Igual"
        app:layout_constraintBottom_toBottomOf="@+id/btn_ponto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/btn_ponto"
        app:layout_constraintTop_toTopOf="@+id/btn_ponto" />

    <TextView
        android:id="@+id/textView_Visor2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:gravity="bottom"
        android:text="=110"
        android:textAlignment="textEnd"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Visor1" />

    <TextView
        android:id="@+id/textView_Visor1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="bottom"
        android:text="50+60"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_Visor2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>